--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>  
   <head> 
     <title>后来的我们</title> 
+    <link rel="apple-touch-icon" href="http://timg.jpg">
+    <meta name="apple-mobile-web-app-title" content="后来的我们">
   </head> 
   <body> 
     <table border="2">
