--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
-<!doctype html>
-<html>  
-  <head> 
-    <title>后来的我们</title> 
-      <link rel="apple-touch-icon" href="https://timg.jpg">
-      <meta name="apple-mobile-web-app-title" content="后来的我们">
-  </head> 
-  <body> 
-    <table border="2">
-      <tr>
-        <th>表头</th>
-        <th> 表头</th>
-        <th> 表头</th>
-        <th colspan="3"> 表头</th>
-      </tr>
-      <tr>
-        <td> 1</td>
-        <td colspan="2"> 2</td>
-        <td rowspan="2">3</td>
-        <td>4</td>
-        <td>5</td>
-      </tr>
-      <tr>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
-        <td>16</td>
-        <td>17</td>
-      </tr>
-      <tr>
-         <td colspan="2">9</td>
-         <td rowspan="2">12</td>
-         <td colspan="3">13</td>
-      </tr>
-      <tr>
-         <td>10</td>
-         <td>11</td>
-         <td >14</td>
-         <td colspan="2">15</td>
-      </tr>
-    </table>
-    <p><a href="https://map.baidu.com/?shareurl=1&poiShareUid=f4a33da91c1206093010afc0">百昌商业城</a></p>
-   
-    <p style="font-size: 20px;color: 65482a;text-align: right;"><b>今晚要去看首映了，好激动，自己最喜欢看这些虐心的电影了</b></p>
-    <br>
-    <p align="center" style="font-size: 80px;color: 080eff;">妇联也要来了，5月11号</p>
-    <hr>
-    <p align="right">今天威少还有米切尔都是没得黑的，乔治自己发挥不好，可能紧张了，不能一场论哦</p>
-    <p style="font-size:50px;color:#FF0000;text-align:center;">爵士是相比雷霆来说更好的一支球队，这是真实的</p>
-    <p><a href="https://www.hupu.com/"></a></p>
-    <p><a href="https://www.sina.com" target="_blank"><p><img src="timg.jpg"></p>新浪</a></p>
-    <p><a href="tel:18033243461">小钢炮</a></p>
-    <p><a href="mailto:1109957207@qq.com">小钢炮的邮箱</a></p>
-  </body> 
+<!doctype html><!--声明是一个HTML文件-->
+<html>
+  <head>
+    <title>初音ミク/Hatsune Miku</title>
+  </head>
+  <body>
+          <p span style="font-size:30px; color:#FF0000; text-align:center">初音未来</p>
+          <p span style="text-align:center">
+    初音未来（初音ミク/Hatsune Miku），是2007年8月31日由CRYPTON FUTURE MEDIA以Yamaha的VOCALOID系列语音合成程序为基础开发的音源库，音源数据资料采样于日本声优藤田咲。
+    2010年4月30日，发布初音未来6种不同声调的版本“初音未来Append”。2013年8月31日，初音未来英文版本同VOCALOID3一并发行。 [1]  此外，初音未来还担任日本音乐团体Sound Horizon的演唱与合唱。随着“初音未来”声库的发售，这种成功的营销方式大幅改变了电子音乐人对于音乐业的认知和整个行业的格局。在衍生文化现象后，初音未来可指代包装封面上的那位葱色头发的少女形象，还可指活跃在动画漫画中出现的“人气歌手”。
+    近年来，初音未来成为各大厂商的“宠儿”，代言、授权产品种类从互联网、时装、汽车到生活用品，世界各地都有其踪迹。
+          </p>
+          <table border="1"; span style="text-align:center">
+           <tr>
+            <th>中文名称</th>
+            <th>世界第一公主殿下</th>
+            <th>填    词</th>
+            <th>ryo</th>
+           </tr>
+           <tr>
+             <td>外文名称</td>
+             <td>
+   ワールドイズマイン</td>
+             <td>谱    曲</td>
+             <th>ryo</th>
+           </tr>
+           <tr>
+             <td>所属专辑</td>
+             <td>supercell</td>
+             <td>编    曲</td>
+             <th>ryo</th>
+           </tr>
+            <tr>
+             <td>发行时间</td>
+             <td>
+    2008年8月15日</td>
+             <td>音乐风格</td>
+             <th>电音 </th>
+           </tr>
+            <tr>
+             <td>歌曲原唱</td>
+             <td>初音ミク </td>
+             <td>歌曲语言</td>
+             <th> 日语 </th>
+           </tr>
+          </table>
+           <p span style="font-size:22px;">代表作品</p>
+
+      <p align="center">甩葱歌<a href="https://baike.baidu.com/item/%E7%94%A9%E8%91%B1%E6%AD%8C/9818347"><img src="1.jpg"></p></a>
+      <p align="center">世界第一可爱<a href="https://baike.baidu.com/item/%E4%B8%96%E7%95%8C%E7%AC%AC%E4%B8%80%E7%9A%84%E5%85%AC%E4%B8%BB%E6%AE%BF%E4%B8%8B/10995143"><img src="2.jpg"></p></a>
+           <p span style="font-size:22px">名字由来</p>
+            <p>初音：“最初的声音（初めての音）”“出发点” “最初的VOCALOID2”
+ミク：汉字写作“未来”，指“VOCALOID所象征的将来音乐之可能性”。</p>
+           <p span style="font-size:22px">初音热潮</p>
+            <p>初音：“最初的声音（初めての音）”“出发点” “附送“初音未来”十天试用版的《DTM MAGAZINE》11月号（2007年10月6日发售）的预约数目亦接近平时的两倍，并于三天内售罄，有部分书店更于数小时内完全售出，是《DTM MAGAZINE》初次遇到的状况。更因为DTM MAGAZINE表示不会加印，而出现炒卖的情况。之后的数期亦有关于角色主唱系列的特集，在12月26日更发售别册“THE VOCALOID CV01初音未来”。</p>
+      <p><a href="tel:13790019668">13790019668</a><!--手机点击直接拨打电话13790019668--></p>
+      <p><a href="mailto:hzzzoo@126.com">hzzzoo@126.com</a><!--点击启动邮件客户端发送邮件给hzzzoo@126.com--></p>
+
+
+  </body>
+  <!--主体结束-->
 </html>
