--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <link href="/assets/font-awesome.min.css" rel="stylesheet">
     <link href="/assets/ada.css" rel="stylesheet">
     <script>
+    <script>
       var _hmt = _hmt || [];
       (function() {
       var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?60961213a96e349e5c3be403910e7bbd";
+      hm.src = "https://hm.baidu.com/hm.js?5b80febaeade777cd0b158c52fc2e51d";
       var s = document.getElementsByTagName("script")[0]; 
       s.parentNode.insertBefore(hm, s);
       })();
   </script>
-
   </head>
   <body>
     <div id="header">
