--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       var _hmt = _hmt || [];
       (function() {
       var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?5b80febaeade777cd0b158c52fc2e51d";
+      hm.src = "https://hm.baidu.com/hm.js?";
       var s = document.getElementsByTagName("script")[0]; 
       s.parentNode.insertBefore(hm, s);
       })();
