--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>博主简介-Select Web</title>
-    <meta name="keywords" content="Zack">
-    <meta name="description" content="Zack Wong，开源网络创始人，国家第八期SEO工程师，顺德职业技术学院电子商务客座讲师，广东安能保险柜制造有限公司网络营销顾问。">
-    <link rel="canonical" href="https://Amy123160.github.io/about/">
+    <title>何为中国式教育-ZYM</title>
+    <meta name="keywords" content="16电商1">
+    <meta name="description" content="ZYM浅谈中国式教育，在16电商1中如何表现/">
     <meta name="applicable-device" content="pc,mobile">
     <link rel="apple-touch-icon" href="https://Amy123160.github.io/images/assets/selectweb-icon.jpg">
     <meta name="apple-mobile-web-app-title" content="Select Web">
