--- a/提高文章阅读性的7大技巧-Select Web.htm
+++ b/提高文章阅读性的7大技巧-Select Web.htm
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>提高文章阅读性的7大技巧-Select Web</title>
-    <meta name="keywords" content="用户体验优化">
-    <meta name="description" content="文章的阅读性是一个对用户友好的体现，熟练运用提高文章阅读性的7大技巧可以留住更多的老用户和吸引更多的新用户，同时也能提高网站浏览量和知名度。">
+    <title>提高成绩的7大技巧-ZYM</title>
+    <meta name="keywords" content="16电商1">
+    <meta name="description" content="成绩文章的阅读性是一个学生学习能力体现，ZYM在16电商1的情况对你的参考作用。">
     <link rel="canonical" href="https://zackwong.github.io/ueo/web-read-skill.html">
     <meta name="applicable-device" content="pc,mobile">
     <link rel="apple-touch-icon" href="https://zackwong.github.io/images/assets/selectweb-icon.jpg">
