--- a/用户体验优化-Select Web.htm
+++ b/用户体验优化-Select Web.htm
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>用户体验优化-Select Web</title>
-    <meta name="keywords" content="用户体验优化">
-    <meta name="description" content="网站用户体验优化(UEO)是针对于用户的体验来对网站进行优化，通过改善网站功能、操作、视觉等网站要素，从而获得用户的青睐并提高流量转换率。">
+    <title>学生的体验-ZYM</title>
+    <meta name="keywords" content="16电商1">
+    <meta name="description" content="学生的体验对于中国教育改善来说是主要的，以16电商1为例，看改善有何作用">
     <link rel="canonical" href="https://zackwong.github.io/ueo/">
     <meta name="applicable-device" content="pc,mobile">
     <link rel="apple-touch-icon" href="https://zackwong.github.io/images/assets/selectweb-icon.jpg">
