--- a/博主简介-Select Web.htm
+++ b/博主简介-Select Web.htm
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div id="header">
-      <div class="top"><a href="https://zackwong.github.io/"><img alt="Select Web Logo" src="%E5%8D%9A%E4%B8%BB%E7%AE%80%E4%BB%8B-Select%20Web_files/selectweb-logo.png"></a></div>
+      <div class="top"><a href="https://amy123160.github.io/"><img alt="Select Web Logo" src="%E5%8D%9A%E4%B8%BB%E7%AE%80%E4%BB%8B-Select%20Web_files/selectweb-logo.png"></a></div>
       <nav class="navbar navbar-expand-lg navbar-light navbar-ada">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="https://zackwong.github.io/">首页</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://amy123160.github.io/">首页</a></li>
             <li class="dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="web" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Web技术</a>
               <div class="dropdown-menu" aria-labelledby="web">
