--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </script>
   </head>
   <body>
+    
     <div id="header">
       <div class="top"><a href="https://Amy123160.github.io"><img alt="Select Web Logo" src="/images/assets/selectweb-logo.png"></a></div>
       <nav class="navbar navbar-expand-lg navbar-light navbar-ada">
@@ -31,6 +32,18 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+        <div class="carousel-item active">
+         <img class="d-block w-100" src="..." alt="First slide">
+        </div>
+       <div class="carousel-item">
+         <img class="d-block w-100" src="..." alt="Second slide">
+       </div>
+       <div class="carousel-item">
+        <img class="d-block w-100" src="..." alt="Third slide">
+      </div>
+      </div>
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
           <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="https://Amy123160.github.io">首页</a></li>
